New explosions and more work on Friendly Creeper
Added Psychic, Wind, and Friendly, fixing any problems the Psychic and
Friendly had. More work on Friendly Creeper. It's currently stable and
can spawn fine but some AI stuff is still very broken.