@@ -1,6 +1,7 @@
 package net.lomeli.ec.entity;
 
 import net.lomeli.ec.entity.ai.EntityAIFriendlyCreeperSwell;
+import net.lomeli.ec.entity.explosion.ExplosionFriendly;
 
 import net.minecraft.block.Block;
 import net.minecraft.entity.Entity;
@@ -20,41 +21,47 @@ import net.minecraft.entity.ai.EntityAISwimming;
 import net.minecraft.entity.ai.EntityAIWander;
 import net.minecraft.entity.ai.EntityAIWatchClosest;
 import net.minecraft.entity.effect.EntityLightningBolt;
+import net.minecraft.entity.monster.EntitySkeleton;
+import net.minecraft.entity.passive.EntityAnimal;
 import net.minecraft.entity.passive.EntityOcelot;
 import net.minecraft.entity.passive.EntityTameable;
 import net.minecraft.entity.player.EntityPlayer;
+import net.minecraft.entity.projectile.EntityArrow;
 import net.minecraft.item.Item;
 import net.minecraft.item.ItemFood;
 import net.minecraft.item.ItemStack;
 import net.minecraft.nbt.NBTTagCompound;
 import net.minecraft.pathfinding.PathEntity;
+import net.minecraft.util.DamageSource;
 import net.minecraft.world.World;
 
 import cpw.mods.fml.relauncher.Side;
 import cpw.mods.fml.relauncher.SideOnly;
 
 public class EntityFriendlyCreeper extends EntityTameable {
-
-    private Entity owner;
-    private float moveSpeed;
+    protected EntityLivingBase owner;
 
     protected int lastActiveTime;
     protected int timeSinceIgnited;
     protected int fuseTime = 30;
     protected int explosionRadius = 3;
+    protected boolean explosionSound;
+
+    private float field_70926_e;
+    private float field_70924_f;
 
     public EntityFriendlyCreeper(World par1World) {
         super(par1World);
-        this.moveSpeed = 0.2F;
         this.setSize(1.0F, 2.0F);
+        this.getNavigator().setAvoidsWater(true);
         this.tasks.addTask(1, new EntityAISwimming(this));
         this.tasks.addTask(2, this.aiSit);
         this.tasks.addTask(3, new EntityAIFriendlyCreeperSwell(this));
         this.tasks.addTask(4, new EntityAIAvoidEntity(this, EntityOcelot.class, 6.0F, 0.25F, 0.3F));
-        this.tasks.addTask(5, new EntityAIAttackOnCollide(this, this.moveSpeed, true));
-        this.tasks.addTask(6, new EntityAIFollowOwner(this, this.moveSpeed, 10.0F, 2.0F));
-        this.tasks.addTask(7, new EntityAIMate(this, this.moveSpeed));
-        this.tasks.addTask(8, new EntityAIWander(this, this.moveSpeed));
+        this.tasks.addTask(5, new EntityAIAttackOnCollide(this, 1.0D, true));
+        this.tasks.addTask(6, new EntityAIFollowOwner(this, 1.0D, 10.0F, 2.0F));
+        this.tasks.addTask(7, new EntityAIMate(this, 1.0D));
+        this.tasks.addTask(8, new EntityAIWander(this, 1.0D));
         this.tasks.addTask(9, new EntityAIWatchClosest(this, EntityPlayer.class, 8.0F));
         this.tasks.addTask(10, new EntityAILookIdle(this));
         this.targetTasks.addTask(1, new EntityAIOwnerHurtByTarget(this));
@@ -62,93 +69,50 @@ public class EntityFriendlyCreeper extends EntityTameable {
         this.targetTasks.addTask(3, new EntityAIHurtByTarget(this, true));
     }
 
+    @Override
     protected void applyEntityAttributes() {
         super.applyEntityAttributes();
-        this.getEntityAttribute(SharedMonsterAttributes.movementSpeed).setAttribute(0.25D);
+        this.getEntityAttribute(SharedMonsterAttributes.movementSpeed).setAttribute(0.25);
+
+        if (this.isTamed())
+            this.getEntityAttribute(SharedMonsterAttributes.maxHealth).setAttribute(20.0D);
+        else
+            this.getEntityAttribute(SharedMonsterAttributes.maxHealth).setAttribute(8.0D);
     }
 
+    @Override
     public boolean isAIEnabled() {
         return true;
     }
 
-    public int getMaxSafePointTries() {
-        return this.getAttackTarget() == null ? 3 : 3 + (int) (this.getHealth() - 1.0F);
-    }
+    @Override
+    public void setAttackTarget(EntityLivingBase par1EntityLivingBase) {
+        super.setAttackTarget(par1EntityLivingBase);
 
-    protected void fall(float par1) {
-        super.fall(par1);
-        this.timeSinceIgnited = (int) ((float) this.timeSinceIgnited + par1 * 1.5F);
-
-        if (this.timeSinceIgnited > this.fuseTime - 5) {
-            this.timeSinceIgnited = this.fuseTime - 5;
+        if (par1EntityLivingBase == null) {
+            this.setAngry(false);
+        } else if (!this.isTamed()) {
+            this.setAngry(true);
         }
     }
 
-    public boolean interact(EntityPlayer par1EntityPlayer) {
-        ItemStack itemstack = par1EntityPlayer.inventory.getCurrentItem();
-
-        if (this.isTamed()) {
-            if (itemstack != null) {
-                if (Item.itemsList[itemstack.itemID] instanceof ItemFood) {
-                    ItemFood itemfood = (ItemFood) Item.itemsList[itemstack.itemID];
-                    if (this.dataWatcher.getWatchableObjectInt(18) < 20) {
-                        if (!par1EntityPlayer.capabilities.isCreativeMode)
-                            --itemstack.stackSize;
-
-                        this.heal(itemfood.getHealAmount());
-
-                        if (itemstack.stackSize <= 0)
-                            par1EntityPlayer.inventory.setInventorySlotContents(par1EntityPlayer.inventory.currentItem, (ItemStack) null);
-
-                        return true;
-                    }
-                }
-            }
-
-            if (par1EntityPlayer.username.equalsIgnoreCase(this.getOwnerName()) && !this.worldObj.isRemote && !this.isBreedingItem(itemstack)) {
-                this.aiSit.setSitting(!this.isSitting());
-                this.isJumping = false;
-                this.setPathToEntity((PathEntity) null);
-            }
-        } else if (itemstack != null && itemstack.itemID == Item.gunpowder.itemID && !this.isAngry()) {
-            if (!par1EntityPlayer.capabilities.isCreativeMode)
-                --itemstack.stackSize;
-
-            if (itemstack.stackSize <= 0)
-                par1EntityPlayer.inventory.setInventorySlotContents(par1EntityPlayer.inventory.currentItem, (ItemStack) null);
-
-            if (!this.worldObj.isRemote) {
-                if (this.rand.nextInt(3) == 0) {
-                    this.setTamed(true);
-                    this.setPathToEntity((PathEntity) null);
-                    this.setAttackTarget((EntityLiving) null);
-                    this.aiSit.setSitting(true);
-                    this.setOwner(par1EntityPlayer.username);
-                    this.owner = par1EntityPlayer;
-                    this.playTameEffect(true);
-                    this.worldObj.setEntityState(this, (byte) 7);
-                } else {
-                    this.playTameEffect(false);
-                    this.worldObj.setEntityState(this, (byte) 6);
-                }
-            }
-
-            return true;
-        }
-
-        return super.interact(par1EntityPlayer);
+    @Override
+    protected void updateAITick() {
+        this.dataWatcher.updateObject(18, Float.valueOf(this.getHealth()));
     }
 
-    public boolean isBreedingItem(ItemStack par1ItemStack) {
-        return par1ItemStack != null && (par1ItemStack.getItem().itemID == Block.plantRed.blockID || par1ItemStack.getItem().itemID == Block.plantYellow.blockID);
-    }
-
+    @Override
     protected void entityInit() {
-        this.dataWatcher.addObject(16, Byte.valueOf((byte) -1));
-        this.dataWatcher.addObject(17, Byte.valueOf((byte) 0));
-        this.dataWatcher.addObject(20, Byte.valueOf((byte) 2));
-        this.dataWatcher.addObject(21, Byte.valueOf((byte) 3));
-        this.dataWatcher.addObject(19, new Byte((byte) 4));
+        super.entityInit();
+        this.dataWatcher.addObject(20, Byte.valueOf((byte) -1));
+        this.dataWatcher.addObject(21, Byte.valueOf((byte) 0));
+        this.dataWatcher.addObject(18, new Float(this.getHealth()));
+        this.dataWatcher.addObject(19, new Byte((byte) 0));
+    }
+
+    @Override
+    public int getMaxSpawnedInChunk() {
+        return 8;
     }
 
     public boolean isAngry() {
@@ -158,53 +122,41 @@ public class EntityFriendlyCreeper extends EntityTameable {
     public void setAngry(boolean par1) {
         byte b0 = this.dataWatcher.getWatchableObjectByte(16);
 
-        if (par1)
+        if (par1) {
             this.dataWatcher.updateObject(16, Byte.valueOf((byte) (b0 | 2)));
-        else
+        } else {
             this.dataWatcher.updateObject(16, Byte.valueOf((byte) (b0 & -3)));
-    }
-
-    @Override
-    public void setAttackTarget(EntityLivingBase par1EntityLiving) {
-        super.setAttackTarget(par1EntityLiving);
-        if (par1EntityLiving instanceof EntityPlayer)
-            this.setAngry(true);
-    }
-
-    protected boolean canDespawn() {
-        return this.isAngry();
-    }
-
-    @Override
-    public Entity getOwner() {
-        return owner;
-    }
-
-    @Override
-    public EntityAgeable createChild(EntityAgeable entityageable) {
-        EntityFriendlyCreeper entity = new EntityFriendlyCreeper(this.worldObj);
-        String s = this.getOwnerName();
-
-        if (s != null && s.trim().length() > 0) {
-            entity.setOwner(s);
-            entity.owner = this.getOwner();
-            entity.setTamed(true);
         }
-
-        return entity;
     }
 
-    public int getCreeperState() {
-        return this.dataWatcher.getWatchableObjectByte(16);
+    @Override
+    protected boolean canDespawn() {
+        return !this.isTamed() && this.ticksExisted > 2400;
     }
 
-    public void setCreeperState(int par1) {
-        this.dataWatcher.updateObject(16, Byte.valueOf((byte) par1));
+    @Override
+    protected String getHurtSound() {
+        return "mob.creeper.say";
     }
 
-    @SideOnly(Side.CLIENT)
-    public float getCreeperFlashIntensity(float par1) {
-        return ((float) this.lastActiveTime + (float) (this.timeSinceIgnited - this.lastActiveTime) * par1) / (float) (this.fuseTime - 2);
+    @Override
+    protected String getDeathSound() {
+        return "mob.creeper.death";
+    }
+
+    @Override
+    protected float getSoundVolume() {
+        return 0.4F;
+    }
+
+    @Override
+    protected int getDropItemId() {
+        return Item.gunpowder.itemID;
+    }
+
+    @Override
+    public void onLivingUpdate() {
+        super.onLivingUpdate();
     }
 
     @Override
@@ -225,23 +177,204 @@ public class EntityFriendlyCreeper extends EntityTameable {
                 this.timeSinceIgnited = this.fuseTime;
 
                 if (!this.worldObj.isRemote) {
-                    boolean flag = this.worldObj.getGameRules().getGameRuleBooleanValue("mobGriefing") || this.getOwner() != null;
+                    boolean flag = this.worldObj.getGameRules().getGameRuleBooleanValue("mobGriefing");
 
-                    if (this.getPowered())
-                        this.worldObj.createExplosion(this, this.posX, this.posY, this.posZ, (float) (this.explosionRadius * 2), flag);
-                    else
-                        this.worldObj.createExplosion(this, this.posX, this.posY, this.posZ, (float) (this.explosionRadius), flag);
-
-                    if (this.getOwner() == null)
-                        this.setDead();
+                    doFriendlyExplosion(false, flag);
                 }
             }
         }
+        if (isSitting())
+            this.rotationPitch = 45.0F;
+
+        super.onUpdate();
+        this.field_70924_f = this.field_70926_e;
+
+        if (this.func_70922_bv())
+            this.field_70926_e += (1.0F - this.field_70926_e) * 0.4F;
+        else
+            this.field_70926_e += (0.0F - this.field_70926_e) * 0.4F;
+
+        if (this.func_70922_bv())
+            this.numTicksToChaseTarget = 10;
+    }
+
+    public void doFriendlyExplosion(boolean powered, boolean flag) {
+        if (!isTamed()) {
+            if (powered)
+                worldObj.createExplosion(this, this.posX, this.posY, this.posZ, this.explosionRadius * 2, flag);
+            else
+                worldObj.createExplosion(this, this.posX, this.posY, this.posZ, (this.explosionRadius), flag);
+
+            this.setDead();
+        } else {
+            if (powered)
+                createFriendlyExplosion(this.posX, this.posY, this.posZ, this.explosionRadius * 2);
+            else
+                createFriendlyExplosion(this.posX, this.posY, this.posZ, (this.explosionRadius));
+        }
+    }
+
+    public ExplosionFriendly createFriendlyExplosion(double x, double y, double z, float strength) {
+        ExplosionFriendly explosion = new ExplosionFriendly(worldObj, this, x, y, z, strength);
+        explosion.isFlaming = false;
+        explosion.isSmoking = true;
+        explosion.doExplosionA();
+        explosion.doExplosionB(true);
+        return explosion;
+    }
+
+    @Override
+    public void onDeath(DamageSource par1DamageSource) {
+        super.onDeath(par1DamageSource);
+
+        if (par1DamageSource.getEntity() instanceof EntitySkeleton) {
+            int i = Item.record13.itemID + this.rand.nextInt(Item.recordWait.itemID - Item.record13.itemID + 1);
+            this.dropItem(i, 1);
+        }
+    }
+
+    @Override
+    public boolean attackEntityFrom(DamageSource par1DamageSource, float par2) {
+        if (this.isEntityInvulnerable())
+            return false;
+        else {
+            Entity entity = par1DamageSource.getEntity();
+            this.aiSit.setSitting(false);
+
+            if (entity != null && !(entity instanceof EntityPlayer) && !(entity instanceof EntityArrow))
+                par2 = (par2 + 1.0F) / 2.0F;
+
+            return super.attackEntityFrom(par1DamageSource, par2);
+        }
+    }
+
+    @Override
+    public boolean attackEntityAsMob(Entity par1Entity) {
+        int i = this.isTamed() ? 4 : 2;
+        return par1Entity.attackEntityFrom(DamageSource.causeMobDamage(this), i);
+    }
+
+    @Override
+    public void setTamed(boolean par1) {
+        super.setTamed(par1);
+
+        if (par1)
+            this.getEntityAttribute(SharedMonsterAttributes.maxHealth).setAttribute(20.0D);
+        else
+            this.getEntityAttribute(SharedMonsterAttributes.maxHealth).setAttribute(8.0D);
+    }
+
+    @Override
+    public boolean interact(EntityPlayer par1EntityPlayer) {
+        ItemStack itemstack = par1EntityPlayer.inventory.getCurrentItem();
+        System.out.println(par1EntityPlayer.username);
+
+        if (this.isTamed()) {
+            if (itemstack != null) {
+                if (Item.itemsList[itemstack.itemID] instanceof ItemFood) {
+                    ItemFood itemfood = (ItemFood) Item.itemsList[itemstack.itemID];
+                    if (this.dataWatcher.getWatchableObjectInt(18) < 20) {
+                        if (!par1EntityPlayer.capabilities.isCreativeMode)
+                            --itemstack.stackSize;
+
+                        this.heal(itemfood.getHealAmount());
+
+                        if (itemstack.stackSize <= 0)
+                            par1EntityPlayer.inventory.setInventorySlotContents(par1EntityPlayer.inventory.currentItem, (ItemStack) null);
+
+                        return true;
+                    }
+                }
+            }
+            if (par1EntityPlayer.username.equalsIgnoreCase(this.getOwnerName()) && !this.worldObj.isRemote && !this.isBreedingItem(itemstack)) {
+                this.aiSit.setSitting(!this.isSitting());
+                this.isJumping = false;
+                this.setPathToEntity((PathEntity) null);
+                this.setTarget((Entity) null);
+                this.setAttackTarget((EntityLivingBase) null);
+            }
+        } else if (itemstack != null && itemstack.itemID == Item.gunpowder.itemID && !this.isAngry()) {
+            if (!par1EntityPlayer.capabilities.isCreativeMode)
+                --itemstack.stackSize;
+
+            if (itemstack.stackSize <= 0)
+                par1EntityPlayer.inventory.setInventorySlotContents(par1EntityPlayer.inventory.currentItem, (ItemStack) null);
+
+            if (!this.worldObj.isRemote) {
+                System.out.println("Right food!");
+                if (this.rand.nextInt(3) == 0) {
+                    this.setTamed(true);
+                    this.setPathToEntity((PathEntity) null);
+                    this.setAttackTarget((EntityLiving) null);
+                    this.setOwner(par1EntityPlayer.username);
+                    this.owner = par1EntityPlayer;
+                    this.playTameEffect(true);
+                    this.worldObj.setEntityState(this, (byte) 7);
+                } else {
+                    this.playTameEffect(false);
+                    this.worldObj.setEntityState(this, (byte) 6);
+                }
+            }
+
+            return true;
+        }
+
+        return super.interact(par1EntityPlayer);
+    }
+
+    @Override
+    public boolean isBreedingItem(ItemStack par1ItemStack) {
+        return par1ItemStack != null && (par1ItemStack.getItem().itemID == Block.plantRed.blockID || par1ItemStack.getItem().itemID == Block.plantYellow.blockID);
+    }
+
+    @Override
+    public boolean canMateWith(EntityAnimal par1EntityAnimal) {
+        if (par1EntityAnimal == this)
+            return false;
+        else if (!this.isTamed())
+            return false;
+        else if (!(par1EntityAnimal instanceof EntityFriendlyCreeper))
+            return false;
+        else {
+            EntityFriendlyCreeper entityCreeper = (EntityFriendlyCreeper) par1EntityAnimal;
+            return !entityCreeper.isTamed() ? false : (entityCreeper.isSitting() ? false : this.isInLove() && entityCreeper.isInLove());
+        }
+    }
+
+    public boolean func_70922_bv() {
+        return this.dataWatcher.getWatchableObjectByte(19) == 1;
+    }
+
+    @Override
+    public Entity getOwner() {
+        return worldObj.getPlayerEntityByName(getOwnerName());
+    }
+
+    @Override
+    public EntityAgeable createChild(EntityAgeable entityageable) {
+        EntityFriendlyCreeper entity = new EntityFriendlyCreeper(this.worldObj);
+        String s = this.getOwnerName();
+
+        if (s != null && s.trim().length() > 0) {
+            entity.setOwner(s);
+            entity.owner = (EntityLivingBase) this.getOwner();
+            entity.setTamed(true);
+        }
+
+        return entity;
+    }
+
+    public int getCreeperState() {
+        return this.dataWatcher.getWatchableObjectByte(16);
+    }
+
+    public void setCreeperState(int par1) {
+        this.dataWatcher.updateObject(16, Byte.valueOf((byte) par1));
     }
 
     @SideOnly(Side.CLIENT)
-    public String tamedTexture() {
-        return this.isTamed() ? "textures/entities/friendlycreeper1.png" : "textures/entities/friendlycreeper0.png";
+    public float getCreeperFlashIntensity(float par1) {
+        return (this.lastActiveTime + (this.timeSinceIgnited - this.lastActiveTime) * par1) / (this.fuseTime - 2);
     }
 
     public boolean getPowered() {
@@ -252,8 +385,7 @@ public class EntityFriendlyCreeper extends EntityTameable {
     public void writeEntityToNBT(NBTTagCompound par1NBTTagCompound) {
         super.writeEntityToNBT(par1NBTTagCompound);
 
-        if (this.dataWatcher.getWatchableObjectByte(17) == 1)
-            par1NBTTagCompound.setBoolean("powered", true);
+        par1NBTTagCompound.setBoolean("powered", getPowered());
 
         par1NBTTagCompound.setShort("Fuse", (short) this.fuseTime);
         par1NBTTagCompound.setByte("ExplosionRadius", (byte) this.explosionRadius);
@@ -271,25 +403,19 @@ public class EntityFriendlyCreeper extends EntityTameable {
             this.explosionRadius = par1NBTTagCompound.getByte("ExplosionRadius");
     }
 
+    @SideOnly(Side.CLIENT)
+    public float getInterestedAngle(float par1) {
+        return (this.field_70924_f + (this.field_70926_e - this.field_70924_f) * par1) * 0.15F * (float) Math.PI;
+    }
+
+    @Override
     public void onStruckByLightning(EntityLightningBolt par1EntityLightningBolt) {
         super.onStruckByLightning(par1EntityLightningBolt);
         this.dataWatcher.updateObject(17, Byte.valueOf((byte) 1));
     }
 
-    public boolean attackEntityAsMob(Entity par1Entity) {
-        return true;
+    @SideOnly(Side.CLIENT)
+    public String tamedTexture() {
+        return this.isTamed() ? "textures/entities/friendlycreeper1.png" : "textures/entities/friendlycreeper0.png";
     }
-
-    protected String getHurtSound() {
-        return "mob.creeper.say";
-    }
-
-    protected String getDeathSound() {
-        return "mob.creeper.death";
-    }
-
-    protected int getDropItemId() {
-        return Item.gunpowder.itemID;
-    }
-
 }
